--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.4.0",
         "symfony/symfony": "2.2.*",
         "solarium/solarium": "3.1.*",
-        "pk/command-extra-bundle": "dev-master"
+        "pk/command-extra-bundle": "1.*"
     },
     "autoload": {
         "psr-0": { "FM": "src/" }
