--- a/src/FM/SearchBundle/Resources/config/services.yml
+++ b/src/FM/SearchBundle/Resources/config/services.yml
@@ -12,7 +12,7 @@ services:
         arguments: [@annotation_reader, @fm_search.registry]
     fm_search.schema_factory:
         class: FM\SearchBundle\Factory\SchemaFactory
-        arguments: [~, @fm_search.schema_builder]
+        arguments: [~, @fm_search.schema_builder, %fm_search.cache_dir%, %kernel.debug%]
     fm_search.search_factory:
         class: FM\SearchBundle\Search\SearchFactory
         arguments: [@fm_search.registry]
