--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "symfony/symfony": "2.2.*",
+        "symfony/symfony": ">=2.2",
         "solarium/solarium": "3.1.*",
         "pk/command-extra-bundle": "1.*"
     },
