--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.4.0",
         "symfony/symfony": "~2.2",
-        "solarium/solarium": "~3.1.0",
+        "solarium/solarium": "3.1.*",
         "pk/command-extra-bundle": ">=1.0.3"
     },
     "autoload": {
