--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "symfony/symfony": "~2.2",
-        "solarium/solarium": "3.1.*",
-        "pk/command-extra-bundle": "~1.0,>=1.0.3"
+        "symfony/symfony": "^2.2|^3.0",
+        "solarium/solarium": "^3.1"
     },
     "autoload": {
         "psr-0": { "FM": "src/" }
