--- a/src/FM/SearchBundle/Resources/config/services.yml
+++ b/src/FM/SearchBundle/Resources/config/services.yml
@@ -9,23 +9,23 @@ services:
     # factories and builders
     fm_search.schema_builder:
         class: FM\SearchBundle\Factory\SchemaBuilder
-        arguments: [@annotation_reader, @fm_search.registry]
+        arguments: ['@annotation_reader', '@fm_search.registry']
     fm_search.schema_factory:
         class: FM\SearchBundle\Factory\SchemaFactory
-        arguments: [~, @fm_search.schema_builder, %fm_search.cache_dir%, %kernel.debug%]
+        arguments: [~, '@fm_search.schema_builder', '%fm_search.cache_dir%', '%kernel.debug%']
     fm_search.search_factory:
         class: FM\SearchBundle\Search\SearchFactory
-        arguments: [@fm_search.registry]
+        arguments: ['@fm_search.registry']
 
     # document manager
     fm_search.document_manager:
         class: FM\SearchBundle\DocumentManager
-        arguments: [@fm_search.client, @fm_search.schema_factory, @fm_search.search_factory, @logger]
+        arguments: ['@fm_search.client', '@fm_search.schema_factory', '@fm_search.search_factory', '@logger']
 
     # events
     fm_search.event.listener.index:
         class: FM\SearchBundle\EventListener\IndexListener
-        arguments: [@fm_search.document_manager]
+        arguments: ['@fm_search.document_manager']
         tags:
             - { name: doctrine.event_listener, event: postPersist }
             - { name: doctrine.event_listener, event: postUpdate }
@@ -37,7 +37,7 @@ services:
     # form stuff
     fm_search.form_factory:
         class: FM\SearchBundle\Form\FormFactory
-        arguments: [@form.factory]
+        arguments: ['@form.factory']
     fm_search.form.type.faceted_choice:
         class: FM\SearchBundle\Form\Type\FacetedChoiceType
         tags:
@@ -51,7 +51,7 @@ services:
     fm_search.logger:
         class: FM\SearchBundle\Plugin\Logger
         calls:
-            - ['setLogger', [@logger]]
+            - ['setLogger', ['@logger']]
         tags:
             - { name: monolog.logger, channel: solr }
     fm_search.data_collector:
